adminConsole - Fixed dropdown for authorization level to be in the un-collapsed table - Styled the dropdown - Removed Dummy examples of this in code

--- a/style/sass/adminConsole.scss
+++ b/style/sass/adminConsole.scss
@@ -321,6 +321,10 @@
                     font-size: ptToEm(16);
                 }
             }
+            
+            #authLevel {
+                margin-bottom: pxToRem(30);
+            }
         }
         
         //Space in-between rows
